793146394 [AIGI] Partners page - bug fixing. Updated text with media block

--- a/wp-content/themes/aigi/assets/css/header-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/header-block-styles.css
@@ -110,7 +110,9 @@
     }
 
 
-
+    .text_item.text-center li {
+        text-align: left;
+    }
 
     .header-block__content-item:not(:last-child) {
         margin-bottom: 16px;
