799011753 [AIGI] Account page - created account page template, added styles

--- a/wp-content/themes/aigi/assets/css/login-page-styles.css
+++ b/wp-content/themes/aigi/assets/css/login-page-styles.css
@@ -401,6 +401,9 @@ body .rmagic .buttonarea input[type='submit'] {
     padding: 15px!important;
     margin: 0;
 }
+.wppb-user-forms textarea {
+    height: unset!important;
+}
 .wppb-user-forms ul li:before {
     display: none;
 }
