--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -34,6 +34,7 @@
 @import 'partners-tiles-styles.css';
 @import 'scholarship-open-styles.css';
 @import 'login-page-styles.css';
+@import 'account-page-styles.css';
 
 
 
