791697072 [AIGI] Our Sponsors page - updated single page styles. add partners single page template

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -703,6 +703,14 @@ strong {
         padding-bottom: 0;
     }
 
+    .single-partners .has-sidebar.sidebar-right .col-content,
+    .single-partners .has-sidebar.sidebar-left .col-content {
+        padding-bottom: 0;
+    }
+    .single-partners .col-sidebar {
+        padding-top: 0;
+    }
+
 
     .has-sidebar,
     .has-sidebar.sidebar-left {
