--- a/wp-content/themes/aigi/assets/css/single-event-styles.css
+++ b/wp-content/themes/aigi/assets/css/single-event-styles.css
@@ -46,6 +46,11 @@
 .post-details__item {
     padding: 16px 0  16px 8px;
 }
+.post-details__item.centered {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 .post-details__heading {
     font-weight: bold;
     font-size: 19.98px;
@@ -58,7 +63,16 @@
     font-size: 14px;
     line-height: 22px;
     letter-spacing: 0.08em;
-
+}
+.post-details__text a {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+    letter-spacing: 0.7px;
+    text-decoration-line: underline;
+    color: var(--color-brand-m-blue-primary);
 }
 .post-details__text:not(:last-child) {
     margin-bottom: 16px;
@@ -277,6 +291,18 @@
     line-height: 22px;
     letter-spacing: 0.02em;
 }
+
+/*Partners single page*/
+.partners_logo {
+    max-width: 164px;
+}
+.partners_logo img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+
 @media (max-width: 767px) {
     .subscribe-event-form {
         width: 100vw;
