--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -35,6 +35,7 @@
 @import 'scholarship-open-styles.css';
 @import 'login-page-styles.css';
 @import 'account-page-styles.css';
+@import 'toolkit-styles.css';
 
 
 
@@ -1970,6 +1971,32 @@ input[type="submit"].btn-transparent-white:hover {
 }
 .btn-group.center {
     justify-content: center;
+}
+
+
+.btn-download {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: var(--color-brand-m-blue-primary);
+    text-decoration: none;
+    position: relative;
+}
+.btn-download:after {
+    content: '';
+    background-image: url(../images/download.svg);
+    margin-left: 5px;
+    width: 12px;
+    height: 13px;
+    position: relative;
+    display: inline-block;
+    background-repeat: no-repeat;
+    margin-bottom: -2px;
+    background-size: contain;
 }
 @media (max-width: 767px) {
     .btn-body {
