--- a/wp-content/themes/aigi/assets/css/breadcrumb-styles.css
+++ b/wp-content/themes/aigi/assets/css/breadcrumb-styles.css
@@ -54,7 +54,8 @@
 
     .page-template-account-page.header-slider-disabled .breadcrumb-container,
     .single-toolkit.header-slider-disabled .breadcrumb-container,
-    .page-template-global-search.header-slider-disabled .breadcrumb-container {
+    .page-template-global-search.header-slider-disabled .breadcrumb-container,
+    .page-template-landing-toolkit-page.header-slider-disabled .breadcrumb-container {
         background-color: var(--color-primary-bg);
     }
 }
