786423369 [AIGI] Toolkit Landing Page - updated text media block and vide page content block

--- a/wp-content/themes/aigi/assets/css/resources-styles.css
+++ b/wp-content/themes/aigi/assets/css/resources-styles.css
@@ -243,6 +243,20 @@
     margin-bottom: -1px;
 }
 
+.content-item.video-block.disable_styling .single-resource__container.video {
+    border: unset;
+    padding: 0;
+}
+.content-item.video-block.disable_styling .single-resource__bg.extended {
+    display: none;
+}
+.content-item.video-block.disable_styling .single-resource__inner {
+    margin: 0;
+}
+.content-item.video-block.disable_styling .single-resource__header {
+    display: none;
+}
+
 
 @media (max-width: 1024px) {
     .single-resource__container {
