--- a/wp-content/themes/aigi/assets/css/text-with-media-styles.css
+++ b/wp-content/themes/aigi/assets/css/text-with-media-styles.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     justify-content: flex-start;
 }
+
 .media-enabled .text-media__content-column.text  {
     min-height: 339px;
 }
@@ -42,6 +43,9 @@
 }
 .media-enabled .text-media__content-column {
     flex-basis: 50%;
+}
+.text-media__content.media_fit_content .text-media__content-column {
+    flex-basis: fit-content;
 }
 .text-media__text:not(:last-child) {
     margin-bottom: 16px;
@@ -139,6 +143,11 @@
     height: 339px;
     position: relative;
 }
+.text-media__content.media_fit_content .text-media__media {
+    width: unset;
+    min-width: unset;
+    margin: 0 48px 0 20px;
+}
 .text-media__media-wrapper img {
     width: 100%;
     height: 100%;
@@ -214,6 +223,10 @@
     }
     .text-media__media {
         height: 190px;
+    }
+
+    .text-media__content.media_fit_content .text-media__media {
+        margin: auto;
     }
 
 
