--- a/wp-content/themes/aigi/assets/css/toolkit-styles.css
+++ b/wp-content/themes/aigi/assets/css/toolkit-styles.css
@@ -303,6 +303,31 @@ ul.toolkit-menu__list > li:before {
 .toolkit-download-topic:before {
     background-image: url('/wp-content/themes/aigi/assets/images/download.svg');
 }
+.toolkit-download-topic__after {
+    margin-right: 0;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10.53px;
+    line-height: 12px;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--color-brand-m-blue-primary);
+}
+.toolkit-download-topic__after:after {
+    content: '';
+    margin-right: 0;
+    margin-left: 8px;
+    width: 16px;
+    height: 14px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin-bottom: -3px;
+    background-image: url('/wp-content/themes/aigi/assets/images/download.svg');
+}
+
 .table-of-content__item {
     margin-bottom: 80px;
 }
