884455262 [BUG] Toolkit landing page defects - fixed bugs

--- a/wp-content/themes/aigi/assets/css/resources-styles.css
+++ b/wp-content/themes/aigi/assets/css/resources-styles.css
@@ -279,13 +279,16 @@
 @media (max-width: 610px) {
     .resource-video__wrap,
     .resource-image__wrap{
-        height: 280px
+        height: 280px;
     }
 }
 @media (max-width: 414px) {
     .resource-video__wrap,
     .resource-image__wrap{
-        height: 192px
+        height: 192px;
+    }
+    .resource-video__wrap iframe {
+        height: 192px;
     }
 }
 
