--- a/wp-content/themes/aigi/assets/css/reding-list.css
+++ b/wp-content/themes/aigi/assets/css/reding-list.css
@@ -7,4 +7,7 @@
     .simplefavorite-button span, .filter-button {
         display: none;
     }
+    .search-page__sorting .facetwp-facet select{
+        height: 51px;
+    }
 }
